# House-Price-Prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  notebook.ipynb  predict.py  preds.json  pyproject.toml  sample_request.json  serve.py  train.py
