[project]
name = "midterm"
version = "0.1.0"
description = "Midterm project for MLZoomCamp"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "ipykernel>=7.1.0",
    "joblib>=1.3.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]
